--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,12 +4,12 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.16.x, 1.17.x]
+        go-version: ['stable','oldstable']
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: install go
-        uses: actions/setup-go@v2
+      - name: Install go
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
       - name: checkout
